# CppSparse

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  chol_demo.m  chol_vs_cholmod_ldl.txt  conftest.py  coo.cpp  coo.h  csc.cpp  csc.h  csparse.cpp  csparse.h  decomposition.cpp  decomposition.h  environment.yml  gaxpy_perf.cpp  gaxpy_perf.json  gaxpy_perf.py  lusolve.m  lusolve.py  lusolve_perf.cpp  lusolve_perf.py  makefile  pytest.ini  row_indexing.m  run_pytest.sh  suppressions.sup  symbolic.cpp  symbolic.h  test_csparse.cpp  test_stdvector.cpp  tri_solve.cpp  tri_solve.h  utils.cpp  utils.h
.github/workflows/: ci.yaml
MATLAB/: amd_ATA_compare.m  amd_compare.m  amd_debug.m  autorange.m  chol_demo.m  colamd_compare.m  create_sparse_matrix.m  davis_example.m  davis_example_amd.m  davis_example_chol.m  davis_example_qr.m  davis_example_small.m  ex7.1_amd_compare.m  ex7_123_amd_compare.m  householder_experiment.m  ichol_nnz.m  inv_permute.m  lu_demo.m  qr_demo.m  qr_left.m  qr_rankdef.m  qr_right.m  qrsol_test.m  row_indexing.m  timeit.m  trisolve.m  west0479_experiment.m
data/: west0479  west0479_amdq  west0479_qrq
demo/: demo.cpp  demo.h  demo1.cpp  demo2.cpp  demo3.cpp  printmatrix_demo.cpp
include/: amd.h  cholesky.h  coo.h  csc.h  csparse.h  decomposition.h  example_matrices.h  fillreducing.h  lu.h  pybind11.h  pybind11_conversion.h  qr.h  solve.h  sparse_matrix.h  types.h  utils.h
notes/: amd_debug_notes.md  amd_notes.md  lu_singular_notes.md  reachability_notes.md
plots/: gatxpy_perf.json  gaxpy_perf.json  lusolve_perf.json
python/: chol_perf.py  cholesky.py  davis_example.py  gaxpy_perf.py  lusolve_perf.py  pyproject.toml  qr.py  qr_example.py
python/csparse/: __init__.py  _cholesky.py  _fillreducing.py  _lu.py  _qr.py  plot.py  qr_utils.py  utils.py
python/csparse/tests/: helpers.py  segfault_dump_NATURAL.txt  segfault_dump_NATURAL_CSR.txt  segfault_reproduce.py  test_basics.py  test_cholesky.py  test_fillreducing.py  test_lu.py  test_qr.py  test_solve.py
python/demo/: demo1.py  demo2.py  demo3.py
python/scripts/: chol_perf.py  cholesky_example.py  davis_example.py  demo.py  demo1.py  demo2.py  demo3.py  dm_solve_demo.py  ex2.27_gaxpy_perf.py  ex2.30_row_indexing_perf.py  ex2.8_sort_indices_perf.py  ex3.8_trisolve_perf.py  ex4.11_chol_perf.py  ex7.1-3_amd_compare.py  ex7.5_btf_cholesky.py  ex7.6_large_diags.py  ex7.7_dmperm_perf.py  ex8.6_lu_qr_bound.py  fillreducing_example.py  gaxpy_perf.py  householder.py  householder_experiment.py  lu_example.py  lu_realloc_calcs.py  lusolve_perf.py  permuted_trisolve.py  qr.py  qr_example.py  qr_vcount.py  row_indexing.py  row_indexing_perf.py  sort_indices_perf.py  trisolve_perf.py  utils.py  west0479_experiment.py
src/: amd.cpp  amd_debug_notes.md  cholesky.cpp  coo.cpp  csc.cpp  decomposition.cpp  example_matrices.cpp  fillreducing.cpp  lu.cpp  pybind11_conversion.cpp  pybind11_wrapper.cpp  qr.cpp  solve.cpp  sparse_matrix.cpp  test_csparse.cpp  utils.cpp
test/: test_ch2.cpp  test_cholesky.cpp  test_coomatrix.cpp  test_cscmatrix.cpp  test_csparse.cpp  test_fillreducing.cpp  test_gaxpy.cpp  test_helpers.cpp  test_helpers.h  test_lu.cpp  test_qr.cpp  test_solve.cpp  test_trisolve.cpp  test_utils.cpp
