[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csparse"
version = "0.1.0"
description = "A Python wrapper for the CSparse++ library"
authors = [{ name = "Bernie Roesler", email = "bernard.roesler@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"  # TODO setup CI to test on multiple versions

dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.2",
    "scipy>=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools]
packages = ["csparse"]

[tool.ruff]
line-length = 88
extend-select = [
    'E',  # pycodestyle errors
    'F',  # pyflakes errors
    # 'D',  # docstring errors
    # 'I',  # isort errors
    # 'PL'  # pylint errors
]
ignore = [
    'D105',     # Missing docstring in magic method
    'D205',     # 1 blank line required between summary line and description
    'PLC2401',  # allow non-ASCII characters
    'PLR2004',  # magic value used in comparison
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
