[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csparse"
version = "0.1.0"
description = "A Python wrapper for the CSparse++ library"
authors = [{ name = "Bernie Roesler", email = "bernard.roesler@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"  # TODO setup CI to test on multiple versions

dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.2",
    "scipy>=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools]
packages = ["csparse"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    'E',  # pycodestyle errors
    'W',  # pycodestyle warnings (whitespace)
    'F',  # pyflakes errors
    'D',  # docstring errors
    # 'I',  # isort errors (import sorting)
    'PL',  # pylint errors
    'PTH', # use Path vs os
]

ignore = [
    'D105',     # Missing docstring in magic method
    'D205',     # 1 blank line required between summary line and description
    'D104',     # Missing docstring in __init__
    'PLC2401',  # non-ASCII characters
    'PLR2004',  # magic value used in comparison
    'PLR0912',  # too many branches (max-branches)
    'PLR0915',  # too many statements (max-statements)
    'E741',     # ambiguous variable name (l, O, I)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['F403', 'F405']  # ignore wildcard imports and undefined names

[tool.ruff.lint.pydocstyle]
convention = "numpy"
