[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csparse"
version = "0.1.0"
description = "A Python wrapper for the CSparse++ library"
readme = "README.md"
authors = [{ name = "Bernie Roesler", email = "bernard.roesler@gmail.com" }]
license = "LGPL-3.0-or-later"
requires-python = ">=3.10"

dependencies = [
    "matplotlib>=3.5",
    "numpy>=2.1",
    "pandas>=2.3",
    "pymatreader>=1.1",
    "Requests>=2.32",
    "scipy>=1.15",
    "suitesparsegetpy",
    "toml",
    "tqdm",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[project.urls]
"Github" = "https://github.com/broesler/CppSparse"

[tool.setuptools]
packages = ["csparse"]

[tool.setuptools.package-data]
csparse = ["*.so"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    'B',    # flake8-bugbear
    'C4',   # flake8-comprehensions
    'D',    # docstring errors
    'E',    # pycodestyle errors
    'F',    # pyflakes errors
    'I',    # isort errors (import sorting)
    'ISC',  # flake8-implicit-str-concat
    'NPY',  # numpy-specific checks
    'PD',   # pandas-vet
    'PIE',  # flake8-pie
    'PL',   # pylint errors
    'PTH',  # use Path vs os
    'UP',   # pyupgrade
    'W',    # pycodestyle warnings (whitespace)
]

ignore = [
    'B028',     # No explicit `stacklevel` keyword argument found
    'B904',     # Within an `except` clause distinguish raised exceptions from errors in exception handling
    'B905',     # `zip()` without an explicit `strict=` parameter
    'D104',     # Missing docstring in __init__
    'D105',     # Missing docstring in magic method
    'D205',     # 1 blank line required between summary line and description
    'E741',     # ambiguous variable name (l, O, I)
    'PIE790',   # Unnecessary `pass` statement
    'PLC2401',  # non-ASCII characters
    'PLR0912',  # too many branches (max-branches)
    'PLR0915',  # too many statements (max-statements)
    'PLR2004',  # magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['I001', 'F403', 'F405']  # ignore import sorting, wildcard imports, and undefined names
"test_*.py" = ['D101', 'D102', 'D103']    # ignore docstring checks in test files

[tool.ruff.lint.pydocstyle]
convention = "numpy"
